# flake8-length

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  setup.cfg
flake8_length/: __init__.py  _categories.py  _checker.py  _cli.py  _parser.py  _plugin.py
tests/: fixture.py  test_checker.py  test_parser.py
